examples/failing/RecordUnionExtra/DataRecord.purs
module Data.Record where

class RowUnion (l :: # *) (r :: # *) (o :: # *) | l r -> o
